# CS2006P1

./: Actions.hi  Actions.hs  Adventure.hi  Adventure.hs  README.md  World.hi  World.hs  adventure  haskell1.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
