cabal-version: 2.4

name:           HaskellPractical1
version:        0.1.0.0
description:    Haskell practical 1 interactive fiction game. It is a simple text adventure game.
license:        MIT
author:         Sid Ramachandran, Hassan Mahmoud, Jake Brockwell
maintainer:     sr270@st-andrews.ac.uk, hm253@st-andrews.ac.uk, jb457@st-andrews.ac.uk
synopsis:       Demonstrates data types, type classes, and functions in Haskell.
category:       Education
tested-with:    GHC == 8.10.4

executable adventure
  main-is:             Adventure.hs
  hs-source-dirs:      .
  other-modules:       Actions, World, Parsing
  build-depends:       base >=4.12 && <4.15
  default-language:    Haskell2010
